@@ -35,6 +35,7 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-04-30 AP         Scripting for table SELECT/INSERT/UPDATE
 2006-04-30 AP         cleanup submenu handling to avoid touching events.cpp when menus are added
 2006-04-30 AP         Use virtual ListView for Query Tool, so no more retrieval time
 2006-04-28 DP  1.4.3  Ensure the user is warned if files cannot be written.
